--- a/DemonsAndDogs/Layout/NavMenu.razor
+++ b/DemonsAndDogs/Layout/NavMenu.razor
@@ -16,8 +16,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/CreateSchema" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu"></span> Create Schema
+            <NavLink class="nav-link" href="/Schemas" Match="NavLinkMatch.All">
+                <span class="bi bi-list-columns-reverse"></span> Schema Editor
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Resources" Match="NavLinkMatch.All">
+                <span class="bi bi-collection-fill"></span> Resources
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/JsonResources" Match="NavLinkMatch.All">
+                <span class="bi bi-database"></span> Raw JSON
             </NavLink>
         </div>
     </nav>
