--- a/DatabaseSeedTool/App.razor
+++ b/DatabaseSeedTool/App.razor
@@ -7,11 +7,16 @@
     <base href="/"/>
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css"/>
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-icons.css"/>
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-light.css"/>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <link href="https://fonts.googleapis.com" rel="stylesheet"/>
     <HeadOutlet @rendermode="RenderMode.InteractiveServer"/>
 </head>
 <body>
     <Routes @rendermode="RenderMode.InteractiveServer"/>
     <script src="_framework/blazor.web.js"></script>
-    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
+
 </body>
 </html>
